client/src/app/site/pages/meetings/pages/participants/pages/mandate-check/components/mandate-check-list/mandate-check-list.component.scss
@use 'src/assets/styles/tables.scss';
@use 'src/assets/styles/media-queries.scss';

.flex-container {
    display: flex;
    flex-direction: column;
}

.justify-center {
    justify-self: center;
}

.align-left {
    align-items: start;
}

.align-right {
    align-items: end;
}

.groups-grid {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 20px;
}

.border-grid {
    display: grid;
    grid-template-columns: 15% 70% 15%;
    @media (max-width: 700px) {
        grid-template-columns: 0px 100% 0px;
        border-width: 0px;
    }
}

.header-grid {
    display: grid;
    grid-template-columns: 92% 8%;
    max-width: inherit;
    margin-top: 50px;
    & h2 {
        margin-top: 0;
        margin-bottom: 0;
        align-self: center;
    }

    @include media-queries.set-breakpoint-lower(xs) {
        grid-template-columns: 84% 8%;
    }
}

mat-card {
    max-width: 100vw;
    display: inline-flex;
    scrollbar-width: none;
}

mat-progress-bar,
mat-progress-bar * {
    width: 100%;
    min-width: 0;
    @include media-queries.set-breakpoint-lower(430px) {
        max-width: 20%;
        min-width: 0;
        padding: 0;
    }
}

.gender-map-grid1 {
    max-width: inherit;
    display: grid;
    gap: 10px;
    .row {
        max-width: inherit;
        display: grid;
        white-space: nowrap;
        padding: 1em 0em 1em 0em;
        grid-template-columns: 8fr 10fr 60fr 10fr 8fr;
        & div {
            width: 100%;
        }
        .central-element {
            max-width: 90%;
            min-width: 0;
        }
    }
    .row:not(:last-child) {
        border-bottom: 1px solid rgba(177, 177, 177, 0.637);
    }
}

.footer-grid {
    display: grid;
    grid-template-columns: 50% 50%;
    grid-gap: 20px;
    @media (max-width: 700px) {
        grid-template-columns: repeat(auto-fit, 250px);
    }
}

.border-line {
    margin-bottom: 7px;
    border-top: 2px solid rgba(128, 128, 128, 0.2);
}

.color-inherit {
    color: inherit;
}

.center {
    align-self: center;
}

.small-margin-top {
    margin-top: 7px;
}

.bold {
    font-weight: 500;
}

.margin-left-large {
    margin-left: 140px;
    @media (max-width: 700px) {
        margin-left: 70px;
    }
}

.margin-left-medium {
    margin-left: 115px;
}

.margin-bottom-20 {
    margin-bottom: 20px;
}

.margin-auto {
    margin: auto;
}

button {
    border-radius: 0%;
}

.text-large-bold {
    font-size: 19px;
    font-weight: 600;
}

.text-small {
    font-size: 12px;

    &-bold {
        font-weight: 500;
    }
}

.text-medium-bold {
    font-size: 16px;
    font-weight: 500;
}

.text-medium {
    font-size: 14px;
}

.min-width-98 {
    min-width: 98px;
}

.min-width-50 {
    min-width: 50px;
}

.padding-right {
    padding-right: 1em;
}

